--- a/home/style.scss
+++ b/home/style.scss
@@ -1,5 +1,13 @@
 @import '../gl/components.scss';
 
+html {
+    @import '../gl/light.scss'
+}
+
+html[dark] {
+    @import '../gl/dark.scss'
+}
+
 /* SUPPORT IS NOT YET A WORKING FEATURE */
 h3.support { display: none; }
 
