--- a/t/style.scss
+++ b/t/style.scss
@@ -1,5 +1,13 @@
 @import '../gl/components.scss';
 
+html {
+    @import '../gl/light.scss'
+}
+
+html[dark] {
+    @import '../gl/dark.scss'
+}
+
 .content-container {
     background-color: transparent;
     display: inline-block;
